--- a/docs/_docs/03.1-cathaction.md
+++ b/docs/_docs/03.1-cathaction.md
@@ -1,7 +1,7 @@
 ---
-title: "Related Papers"
-permalink: /docs/paper/
-excerpt: "Related papers."
+title: "CathAction Dataset"
+permalink: /docs/cathaction/
+excerpt: "CathAction Dataset."
 classes: wide
 ---
 
