--- a/docs/_docs/01.3-validation.md
+++ b/docs/_docs/01.3-validation.md
@@ -9,8 +9,8 @@ We develop endovascular robotic systems specifically designed to assist in robot
 ## Phantom Validation
 
 <div class="image-container">
-  <img width="300px" src="{{ site.baseurl }}/assets/images/xray_room_master.png" alt="xray_room_master">
-  <img width="300px" src="{{ site.baseurl }}/assets/images/xray_room_slave.png" alt="xray_room_slave">
+  <img width="300px" src="{{ site.baseurl }}/assets/images/xray_room_master.jpg" alt="xray_room_master">
+  <img width="300px" src="{{ site.baseurl }}/assets/images/xray_room_slave.jpg" alt="xray_room_slave">
 </div>
 
 CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
@@ -23,7 +23,14 @@ CathEase is an accessible and cost-effective endovascular robot that focuses on 
 CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
 
 
-## SplineFormer
+## Target
+<div class="image-container">
+  <img src="{{ site.baseurl }}/assets/images/setup_exp.jpg" width="40%" alt="setup_exp">
+</div>
+CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
+
+
+## SplineFormer Network
 
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images/splineformer.png" width="100%" alt="splineformer">
@@ -31,4 +38,25 @@ CathEase is an accessible and cost-effective endovascular robot that focuses on 
 
 CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
 
+
+
+## Expert Navigation Network
+
+<div class="image-container">
+  <img src="{{ site.baseurl }}/assets/images/expert_network.png" width="100%" alt="expert_network">
+</div>
+
+CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
+
+
 ## Results
+
+<div class="image-container">
+  <img src="{{ site.baseurl }}/assets/images/expert_result.png" width="100%" alt="expert_result">
+</div>
+
+
+<div class="image-container">
+  <img src="{{ site.baseurl }}/assets/images/expert_table.jpg" width="100%" alt="expert_table">
+</div>
+
