--- a/docs/_docs/01.3-validation.md
+++ b/docs/_docs/01.3-validation.md
@@ -2,6 +2,7 @@
 title: "Clinical Validation"
 permalink: /docs/validation/
 excerpt: "Clinical Validation."
+toc: true
 ---
 
 We develop endovascular robotic systems specifically designed to assist in robot-assisted catheterization tasks. The robotic platforms integrate seamlessly with the CathSim simulator, providing a comprehensive toolset for researchers and clinicians to explore endovascular techniques.
@@ -46,6 +47,13 @@ CathEase is an accessible and cost-effective endovascular robot that focuses on 
   <img src="{{ site.baseurl }}/assets/images/expert_network.png" width="100%" alt="expert_network">
 </div>
 
+CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
+
+
+## Segmentation Model
+<div class="image-container">
+  <img src="{{ site.baseurl }}/assets/images/segmentation_model.jpg" width="100%" alt="segmentation_model">
+</div>
 CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
 
 
