--- a/docs/_docs/01.3-validation.md
+++ b/docs/_docs/01.3-validation.md
@@ -1,34 +1,36 @@
 ---
-title: "Clinical Validation"
+title: "Validation"
 permalink: /docs/validation/
 excerpt: "Clinical Validation."
 toc: true
 ---
 
-We develop endovascular robotic systems specifically designed to assist in robot-assisted catheterization tasks. The robotic platforms integrate seamlessly with the CathSim simulator, providing a comprehensive toolset for researchers and clinicians to explore endovascular techniques.
+We validate our CathSim simulator and robots through testing on both phantom models and animal subjects.
 
-## Phantom Validation
+## Phantom Setup
 
 <div class="image-container">
   <img width="300px" src="{{ site.baseurl }}/assets/images/xray_room_master.jpg" alt="xray_room_master">
   <img width="300px" src="{{ site.baseurl }}/assets/images/xray_room_slave.jpg" alt="xray_room_slave">
+
 </div>
 
-CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
+To simulate human vascular anatomy, we use a half-body vascular phantom model, which is housed in a transparent box and connected to a closed water circuit to mimic blood flow.
 
+We utilize a Bi-planar X-ray system equipped with 60 kW Epsilon X-ray Generators and 16-inch Image Intensifier Tubes, incorporating dual focal spot Varian X-ray tubes for high-definition imaging.
 
-## Animal Validation
+## Animal Setup
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images/animal_setup.jpg" width="40%" alt="animal_setup">
 </div>
-CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
+We use pigs as animal subjects for our validation, as their anatomy shares similarities with that of humans.
 
 
 ## Target
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images/setup_exp.jpg" width="40%" alt="setup_exp">
 </div>
-CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
+The catheterization targets for our procedures are the brachiocephalic artery (BCA) and the left common carotid artery (LCCA).
 
 
 ## SplineFormer Network
@@ -37,8 +39,7 @@ CathEase is an accessible and cost-effective endovascular robot that focuses on 
   <img src="{{ site.baseurl }}/assets/images/splineformer.png" width="100%" alt="splineformer">
 </div>
 
-CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
-
+We propose SplineFormer, a new transformer-based architecture, designed specifically to predict the continuous, smooth shape of the guidewire in an explainable wa
 
 
 ## Expert Navigation Network
@@ -46,8 +47,7 @@ CathEase is an accessible and cost-effective endovascular robot that focuses on 
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images/expert_network.png" width="100%" alt="expert_network">
 </div>
-
-CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
+Our Expert Navigation Network (ENN) is a multimodal system trained using CathSim and subsequently transferred to operate on the real robot.
 
 
 ## Segmentation Model
