add results doc

--- a/docs/_docs/01.3-validation.md
+++ b/docs/_docs/01.3-validation.md
@@ -15,9 +15,11 @@ We validate our CathSim simulator and robots through testing on both phantom mod
 
 </div>
 
-To simulate human vascular anatomy, we use a half-body vascular phantom model, which is housed in a transparent box and connected to a closed water circuit to mimic blood flow.
+To simulate human vascular anatomy, we use a half-body vascular phantom model, which is connected to a closed water circuit to mimic blood flow.
 
-We utilize a Bi-planar X-ray system equipped with 60 kW Epsilon X-ray Generators and 16-inch Image Intensifier Tubes, incorporating dual focal spot Varian X-ray tubes for high-definition imaging.
+We utilize a Bi-planar X-ray system equipped with 60 kW Epsilon X-ray Generators and 16-inch Image Intensifier Tubes for high-definition imaging.
+
+The surgeon operates the master device from a control room to drive the follower robot located in the X-ray room.
 
 ## Animal Setup
 <div class="image-container">
@@ -30,7 +32,7 @@ We use pigs as animal subjects for our validation, as their anatomy shares simil
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images/setup_exp.jpg" width="40%" alt="setup_exp">
 </div>
-The catheterization targets for our procedures are the brachiocephalic artery (BCA) and the left common carotid artery (LCCA).
+The catheterization targets are the brachiocephalic artery (BCA) and the left common carotid artery (LCCA).
 
 
 ## SplineFormer Network
@@ -39,22 +41,22 @@ The catheterization targets for our procedures are the brachiocephalic artery (B
   <img src="{{ site.baseurl }}/assets/images/splineformer.png" width="100%" alt="splineformer">
 </div>
 
-We propose SplineFormer, a new transformer-based architecture, designed specifically to predict the continuous, smooth shape of the guidewire in an explainable wa
+We propose SplineFormer, a new transformer-based architecture, designed specifically to predict the continuous, smooth shape of the guidewire in an explainable way
 
 
 ## Expert Navigation Network
 
 <div class="image-container">
-  <img src="{{ site.baseurl }}/assets/images/expert_network.png" width="100%" alt="expert_network">
+  <img src="{{ site.baseurl }}/assets/images/expert_network.png" width="70%" alt="expert_network">
 </div>
-Our Expert Navigation Network (ENN) is a multimodal system trained using CathSim and subsequently transferred to operate on the real robot.
+Our Expert Navigation Network is a multimodal system trained using CathSim simulator and subsequently transferred to the real robot.
 
 
 ## Segmentation Model
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images/segmentation_model.jpg" width="100%" alt="segmentation_model">
 </div>
-CathEase is an accessible and cost-effective endovascular robot that focuses on translating and rotating the guidewire. It uses a Nema 17 stepper motor for translation, an additional motor for rotation, and is controlled by an Arduino Uno Rev3 with a CNC shield and two A4899 drivers, powered by a 12V DC source. Teleoperation input is provided through a Google Stadia joystick.
+We introduce a shape-sensitive loss function for catheter and guidewire segmentation and utilize it in a vision transformer network to establish a new state-of-the-art result on a large-scale X-ray images dataset.
 
 
 ## Results
@@ -63,8 +65,12 @@ CathEase is an accessible and cost-effective endovascular robot that focuses on 
   <img src="{{ site.baseurl }}/assets/images/expert_result.png" width="100%" alt="expert_result">
 </div>
 
-
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images/expert_table.jpg" width="100%" alt="expert_table">
 </div>
 
+<video width="400" height="400" controls>
+  <source src="{{ site.baseurl }}/assets/videos/splinefomer_results.mp4" alt="splinefomer_results video" type="video/mp4">
+</video>
+
+The results demonstrate the successful integration of simulation, machine learning, and vision technologies to achieve autonomous catheterization. 
