--- a/docs/_docs/01.3-validation.md
+++ b/docs/_docs/01.3-validation.md
@@ -28,7 +28,7 @@ The surgeon operates the master device from a control room to drive the follower
 We use pigs as animal subjects for our validation, as their anatomy shares similarities with that of humans.
 
 
-## Target
+## Catheterization Target
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images/setup_exp.jpg" width="40%" alt="setup_exp">
 </div>
@@ -41,7 +41,7 @@ The catheterization targets are the brachiocephalic artery (BCA) and the left co
   <img src="{{ site.baseurl }}/assets/images/splineformer.png" width="100%" alt="splineformer">
 </div>
 
-We propose SplineFormer, a new transformer-based architecture, designed specifically to predict the continuous, smooth shape of the guidewire in an explainable way
+We propose SplineFormer, a new transformer-based architecture, designed specifically to predict the continuous, smooth shape of the guidewire in an explainable way.
 
 
 ## Expert Navigation Network
