--- a/docs/_docs/01.1-introduction.md
+++ b/docs/_docs/01.1-introduction.md
@@ -13,9 +13,9 @@ Welcome to CathSim Project!
   <img src="{{ site.baseurl }}/assets/images/cathsim_overview.jpg" width="80%" alt="Low Tort Aorta">
 </div>
 
-CathSim is developed using the Mujoco physics engine, providing a versatile platform for both research and training in robot-assisted endovascular intervention. The simulator is designed to support autonomous catheterization, data generation, and medical training via AR/VR devices.
+CathSim provides a versatile platform for both research and training in robot-assisted endovascular intervention. The simulator is designed to support autonomous catheterization, data generation, and medical training via AR/VR devices.
 
-## Architecture
+## Components
 
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images-cathsim/overview.jpg" width="80%" alt="Low Tort Aorta">
@@ -66,7 +66,7 @@ CathBot’s actuation relies on frictional forces between the guidewire and clam
 
 ### Statistical Analysis
 
-The empirical force distribution observed in experiments aligns closely with a Gaussian distribution based on real experimental data by Kundrat et al. Using the Mann-Whitney test, we compared these distributions, yielding a statistic of \(76076\) and a p-value of \(p \approx 0.445\). This suggests that any differences are likely due to chance, confirming that our simulator’s force distribution resembles that of the real system, validating CathSim’s capability to mimic real-world robotic interactions.
+We use the Mann-Whitney test to compare the empirical force distribution from our CathSim simulator and the real robot. The results confirm that our simulator’s force distribution resembles that of the real system, validating CathSim’s capability to mimic real-world robotic interactions.
 
 ### User Study
 
