--- a/docs/_docs/01.3-validation.md
+++ b/docs/_docs/01.3-validation.md
@@ -10,14 +10,17 @@ We validate our CathSim simulator and robots through testing on both phantom mod
 ## Phantom Setup
 
 <div class="image-container">
-  <img width="300px" src="{{ site.baseurl }}/assets/images/xray_room_master.jpg" alt="xray_room_master">
-  <img width="300px" src="{{ site.baseurl }}/assets/images/xray_room_slave.jpg" alt="xray_room_slave">
+  <img src="{{ site.baseurl }}/assets/images/xray_room_slave.jpg" width="80%" alt="xray_room_slave">
 
 </div>
 
 To simulate human vascular anatomy, we use a half-body vascular phantom model, which is connected to a closed water circuit to mimic blood flow.
 
 We utilize a Bi-planar X-ray system equipped with 60 kW Epsilon X-ray Generators and 16-inch Image Intensifier Tubes for high-definition imaging.
+
+<div class="image-container">
+  <img src="{{ site.baseurl }}/assets/images/xray_room_master.jpg" width="80%" alt="xray_room_master">
+</div>
 
 The surgeon operates the master device from a control room to drive the follower robot located in the X-ray room.
 
