--- a/docs/_docs/02.2-cathaction.md
+++ b/docs/_docs/02.2-cathaction.md
@@ -8,6 +8,6 @@ excerpt: "CathAction Dataset."
   <img src="{{ site.baseurl }}/assets/images/cathaction.jpg" width="100%" alt="cathaction dataset">
 </div>
 
-CathAction is large-scale dataset designed for advancing catheterization understanding. CathAction comprises approximately 500,000 annotated frames focused on catheterization understanding and collision detection, along with 25,000 groundtruth masks dedicated to catheter and guidewire segmentation.
+CathAction is large-scale dataset for advancing catheterization understanding. CathAction comprises approximately 500,000 annotated frames for catheterization understanding and collision detection, along with 25,000 groundtruth masks for catheter and guidewire segmentation.
 
-To download the CathAction dataset, please visit [CathAction website](https://airvlab.github.io/cathaction/).
+To download CathAction dataset, please visit [CathAction website](https://airvlab.github.io/cathaction/).
