--- a/docs/_docs/01.3-validation.md
+++ b/docs/_docs/01.3-validation.md
@@ -14,9 +14,7 @@ We validate our CathSim simulator and robots through testing on both phantom mod
 
 </div>
 
-To simulate human vascular anatomy, we use a half-body vascular phantom model, which is connected to a closed water circuit to mimic blood flow.
-
-We utilize a Bi-planar X-ray system equipped with 60 kW Epsilon X-ray Generators and 16-inch Image Intensifier Tubes for high-definition imaging.
+To simulate human vascular anatomy, we use a half-body vascular phantom model, which is connected to a closed water circuit to mimic blood flow. We utilize a Bi-planar X-ray system equipped with 60 kW Epsilon X-ray Generators and 16-inch Image Intensifier Tubes for high-definition imaging.
 
 <div class="image-container">
   <img src="{{ site.baseurl }}/assets/images/xray_room_master.jpg" width="100%" alt="xray_room_master">
