--- a/docs/_docs/02.1-code.md
+++ b/docs/_docs/02.1-code.md
@@ -1,9 +1,11 @@
 ---
-title: "Related Papers"
+title: "Code & Papers"
 permalink: /docs/code/
 excerpt: "Related papers."
 classes: wide
 ---
+
+Our code is available on Github at [https://github.com/airvlab/cathsim](https://github.com/airvlab/cathsim).
 
 List of papers using our CathSim simulator and datasets.
 
