--- a/docs/_docs/02.1-code.md
+++ b/docs/_docs/02.1-code.md
@@ -1,5 +1,5 @@
 ---
-title: "Code & Papers"
+title: "Code"
 permalink: /docs/code/
 excerpt: "Related papers."
 classes: wide
@@ -7,6 +7,8 @@ classes: wide
 
 Our code is available on Github at [https://github.com/airvlab/cathsim](https://github.com/airvlab/cathsim).
 
+
+## Papers
 List of papers using our CathSim simulator and datasets.
 
 Please create a [**pull request**](https://github.com/airvlab/cathsim) to include your paper into this list.
