--- a/docs/_docs/02.1-code.md
+++ b/docs/_docs/02.1-code.md
@@ -8,7 +8,7 @@ classes: wide
 Our code is available on Github at [https://github.com/airvlab/cathsim](https://github.com/airvlab/cathsim).
 
 
-## Papers
+# Papers
 List of papers using our CathSim simulator and datasets.
 
 Please create a [**pull request**](https://github.com/airvlab/cathsim) to include your paper into this list.
