--- a/docs/_docs/02.1-code.md
+++ b/docs/_docs/02.1-code.md
@@ -8,6 +8,10 @@ classes: wide
 Our code is available on Github at [https://github.com/airvlab/cathsim](https://github.com/airvlab/cathsim).
 
 
+# Datasets
+Check out our [CathAction](https://airvlab.github.io/cathsim/docs/cathaction/) and [Guide3D](https://airvlab.github.io/cathsim/docs/guide3d/) dataset for endovascular intervention!
+
+
 # Papers
 List of papers using our CathSim simulator and datasets.
 
