--- a/docs/_docs/02.1-code.md
+++ b/docs/_docs/02.1-code.md
@@ -15,21 +15,19 @@ Check out our [CathAction](https://airvlab.github.io/cathsim/docs/cathaction/) a
 # Papers
 List of papers using our CathSim simulator and datasets.
 
-Please create a [**pull request**](https://github.com/airvlab/cathsim) to include your paper into this list.
+Please create a [*pull request*](https://github.com/airvlab/cathsim) to include your paper into this list.
 
-- [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Minh Nhat Vu, Mohamed EMK Abdelaziz, Sebastiano Fichera, Chun-Yi Lee, Pierre Berthet-Rayne, Ferdinando Rodriguez y Baena, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). **Cathsim: An Open-source Simulator for Endovascular Intervention**. IEEE Transactions on Medical Robotics and Bionics, 2024. [[IEEE]](#)
-- [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Tuan Vo, Minh Nhat Vu, Jingxuan Kang, Hoan Nguyen, Olatunji Omisore, Pierre Berthet-Rayne, Sebastiano Fichera, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). **Autonomous Catheterization with Open-source Simulator and Expert Trajectory**. arXiv preprint arXiv:2401.09059, 2024.
-- Baoru Huang, Tuan Vo, Chayun Kongtongvattana, Giulio Dagnino, Dennis Kundrat, Wenqiang Chi, Mohamed Abdelaziz, Trevor Kwok, Tudor Jianu, Tuong Do, et al. **CathAction: A Benchmark for Endovascular Intervention Understanding**. arXiv preprint arXiv:2408.13126, 2024.
-- Wentao Liu, Tong Tian, Weijin Xu, Bowen Liang, Qingsheng Lu, Xipeng Pan, Wenyi Zhao, Huihua Yang, Ruisheng Su. **Image-Guided Autonomous Guidewire Navigation in Robot-Assisted Endovascular Interventions Using Reinforcement Learning**. arXiv preprint arXiv:2403.05748, 2024.
-- Alex Ranne, Liming Kuang, Yordanka Velikova, Nassir Navab, et al. **CathFlow: Self-Supervised Segmentation of Catheters in Interventional Ultrasound Using Optical Flow and Transformers**. arXiv preprint arXiv:2403.14465, 2024.
-- Jingxuan Kang, [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Frans Coenen, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/), Ngan Le. **Translating Simulation Images to X-Ray Images via Multi-Scale Semantic Matching**. In DEMI, MICCAI Workshop, Marrakesh, Morocco, 2024. [[Proceedings]](#)
-- [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Hoan Nguyen, Binod Bhattarai, Tuong Do, Erman Tjiputra, Quang Tran, Pierre Berthet-Rayne, Ngan Le, Sebastiano Fichera, et al. **Guide3D: A Bi-planar X-ray Dataset for 3D Shape Reconstruction**. arXiv preprint arXiv:2410.22224, 2024.
-- Yuxuan Wen, Evgenia Roussinova, Olivier Brina, Paolo Machi, Mohamed Bouri. **Generalizing Segmentation Foundation Model Under Sim-to-real Domain-shift for Guidewire Segmentation in X-ray Fluoroscopy**. arXiv preprint arXiv:2410.07460, 2024.
-- [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Pierre Berthet-Rayne, Sebastiano Fichera, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). **3D Guidewire Shape Reconstruction from Monoplane Fluoroscopic Images**. arXiv preprint arXiv:2311.11209, 2023.
-- Chayun Kongtongvattana, Baoru Huang, Jingxuan Kang, Hoan Nguyen, Olajide Olufemi, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). **Shape-Sensitive Loss for Catheter and Guidewire Segmentation**. arXiv preprint arXiv:2311.11205, 2023.
-- Wei Tian, Jian Guo, Shuxiang Guo, Qiang Fu. **A DDPG-based Method of Autonomous Catheter Navigation in Virtual Environment**. In ICMA, 2023 IEEE International Conference on Mechatronics and Automation, pp. 889-893, 2023. [[IEEE]](#)
-
-<!-- ```bash
+- [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Minh Nhat Vu, Mohamed EMK Abdelaziz, Sebastiano Fichera, Chun-Yi Lee, Pierre Berthet-Rayne, Ferdinando Rodriguez y Baena, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Cathsim: An Open-source Simulator for Endovascular Intervention*. IEEE Transactions on Medical Robotics and Bionics (T-MRB), 2024.
+- [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Tuan Vo, Minh Nhat Vu, Jingxuan Kang, Hoan Nguyen, Olatunji Omisore, Pierre Berthet-Rayne, Sebastiano Fichera, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Autonomous Catheterization with Open-source Simulator and Expert Trajectory*. arXiv preprint arXiv:2401.09059, 2024.
+- Baoru Huang, Tuan Vo, Chayun Kongtongvattana, Giulio Dagnino, Dennis Kundrat, Wenqiang Chi, Mohamed Abdelaziz, Trevor Kwok, Tudor Jianu, Tuong Do, et al. *CathAction: A Benchmark for Endovascular Intervention Understanding*. arXiv preprint arXiv:2408.13126, 2024.
+- Wentao Liu, Tong Tian, Weijin Xu, Bowen Liang, Qingsheng Lu, Xipeng Pan, Wenyi Zhao, Huihua Yang, Ruisheng Su. *Image-Guided Autonomous Guidewire Navigation in Robot-Assisted Endovascular Interventions Using Reinforcement Learning*. arXiv preprint arXiv:2403.05748, 2024.
+- Alex Ranne, Liming Kuang, Yordanka Velikova, Nassir Navab, et al. *CathFlow: Self-Supervised Segmentation of Catheters in Interventional Ultrasound Using Optical Flow and Transformers*. IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2024.
+- Jingxuan Kang, [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Frans Coenen, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/), Ngan Le. *Translating Simulation Images to X-Ray Images via Multi-Scale Semantic Matching*. In DEMI Workshop, MICCAI 2024.
+- [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Hoan Nguyen, Binod Bhattarai, Tuong Do, Erman Tjiputra, Quang Tran, Pierre Berthet-Rayne, Ngan Le, Sebastiano Fichera, et al. *Guide3D: A Bi-planar X-ray Dataset for 3D Shape Reconstruction*. In ACCV, 2024.
+- Yuxuan Wen, Evgenia Roussinova, Olivier Brina, Paolo Machi, Mohamed Bouri. *Generalizing Segmentation Foundation Model Under Sim-to-real Domain-shift for Guidewire Segmentation in X-ray Fluoroscopy*. arXiv preprint arXiv:2410.07460, 2024.
+- [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Pierre Berthet-Rayne, Sebastiano Fichera, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *3D Guidewire Shape Reconstruction from Monoplane Fluoroscopic Images*. arXiv preprint arXiv:2311.11209, 2023.
+- Chayun Kongtongvattana, Baoru Huang, Jingxuan Kang, Hoan Nguyen, Olajide Olufemi, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Shape-Sensitive Loss for Catheter and Guidewire Segmentation*. International Conference on Robot Intelligence Technology and Applications 2023., 2023.
+- Wei Tian, Jian Guo, Shuxiang Guo, Qiang Fu. *A DDPG-based Method of Autonomous Catheter Navigation in Virtual Environment*. In ICMA, 2023 IEEE International Conference on Mechatronics and Automation, 2023. <!-- ```bash
 minimal-mistakes
 ├── _data                      # data files for customizing the theme
 |  ├── navigation.yml          # main navigation links
