--- a/docs/_docs/02.1-code.md
+++ b/docs/_docs/02.1-code.md
@@ -27,7 +27,9 @@ Please create a [*pull request*](https://github.com/airvlab/cathsim) to include 
 - Yuxuan Wen, Evgenia Roussinova, Olivier Brina, Paolo Machi, Mohamed Bouri. *Generalizing Segmentation Foundation Model Under Sim-to-real Domain-shift for Guidewire Segmentation in X-ray Fluoroscopy*. arXiv preprint arXiv:2410.07460, 2024.
 - [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Pierre Berthet-Rayne, Sebastiano Fichera, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *3D Guidewire Shape Reconstruction from Monoplane Fluoroscopic Images*. arXiv preprint arXiv:2311.11209, 2023.
 - Chayun Kongtongvattana, Baoru Huang, Jingxuan Kang, Hoan Nguyen, Olajide Olufemi, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Shape-Sensitive Loss for Catheter and Guidewire Segmentation*. International Conference on Robot Intelligence Technology and Applications 2023., 2023.
-- Wei Tian, Jian Guo, Shuxiang Guo, Qiang Fu. *A DDPG-based Method of Autonomous Catheter Navigation in Virtual Environment*. In ICMA, 2023 IEEE International Conference on Mechatronics and Automation, 2023. <!-- ```bash
+- Wei Tian, Jian Guo, Shuxiang Guo, Qiang Fu. *A DDPG-based Method of Autonomous Catheter Navigation in Virtual Environment*. In IEEE International Conference on Mechatronics and Automation, 2023. 
+
+<!-- ```bash
 minimal-mistakes
 ├── _data                      # data files for customizing the theme
 |  ├── navigation.yml          # main navigation links
