--- a/docs/_docs/02.1-code.md
+++ b/docs/_docs/02.1-code.md
@@ -22,11 +22,11 @@ Please create a [*pull request*](https://github.com/airvlab/cathsim) to include 
 - Baoru Huang, Tuan Vo, Chayun Kongtongvattana, Giulio Dagnino, Dennis Kundrat, Wenqiang Chi, Mohamed Abdelaziz, Trevor Kwok, Tudor Jianu, Tuong Do, et al. *CathAction: A Benchmark for Endovascular Intervention Understanding*. arXiv preprint arXiv:2408.13126, 2024.
 - Wentao Liu, Tong Tian, Weijin Xu, Bowen Liang, Qingsheng Lu, Xipeng Pan, Wenyi Zhao, Huihua Yang, Ruisheng Su. *Image-Guided Autonomous Guidewire Navigation in Robot-Assisted Endovascular Interventions Using Reinforcement Learning*. arXiv preprint arXiv:2403.05748, 2024.
 - Alex Ranne, Liming Kuang, Yordanka Velikova, Nassir Navab, et al. *CathFlow: Self-Supervised Segmentation of Catheters in Interventional Ultrasound Using Optical Flow and Transformers*. IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2024.
-- Jingxuan Kang, [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Frans Coenen, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/), Ngan Le. *Translating Simulation Images to X-Ray Images via Multi-Scale Semantic Matching*. In DEMI Workshop, MICCAI 2024.
+- Jingxuan Kang, [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Frans Coenen, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/), Ngan Le. *Translating Simulation Images to X-Ray Images via Multi-Scale Semantic Matching*. In DEMI Workshop, MICCAI, 2024.
 - [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Hoan Nguyen, Binod Bhattarai, Tuong Do, Erman Tjiputra, Quang Tran, Pierre Berthet-Rayne, Ngan Le, Sebastiano Fichera, et al. *Guide3D: A Bi-planar X-ray Dataset for 3D Shape Reconstruction*. In ACCV, 2024.
 - Yuxuan Wen, Evgenia Roussinova, Olivier Brina, Paolo Machi, Mohamed Bouri. *Generalizing Segmentation Foundation Model Under Sim-to-real Domain-shift for Guidewire Segmentation in X-ray Fluoroscopy*. arXiv preprint arXiv:2410.07460, 2024.
 - [Tudor Jianu](https://tudorjnu.github.io/), Baoru Huang, Pierre Berthet-Rayne, Sebastiano Fichera, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *3D Guidewire Shape Reconstruction from Monoplane Fluoroscopic Images*. arXiv preprint arXiv:2311.11209, 2023.
-- Chayun Kongtongvattana, Baoru Huang, Jingxuan Kang, Hoan Nguyen, Olajide Olufemi, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Shape-Sensitive Loss for Catheter and Guidewire Segmentation*. International Conference on Robot Intelligence Technology and Applications 2023., 2023.
+- Chayun Kongtongvattana, Baoru Huang, Jingxuan Kang, Hoan Nguyen, Olajide Olufemi, [Anh Nguyen](https://www.csc.liv.ac.uk/~anguyen/). *Shape-Sensitive Loss for Catheter and Guidewire Segmentation*. International Conference on Robot Intelligence Technology and Applications, 2023.
 - Wei Tian, Jian Guo, Shuxiang Guo, Qiang Fu. *A DDPG-based Method of Autonomous Catheter Navigation in Virtual Environment*. In IEEE International Conference on Mechatronics and Automation, 2023. 
 
 <!-- ```bash
